horizontal scroll fixed

--- a/src/Components/HomeSections/HomeSection.scss
+++ b/src/Components/HomeSections/HomeSection.scss
@@ -137,6 +137,10 @@
    }
 
 @media only screen and (min-width: 901px) {
+    .padding_bottom{
+        padding-bottom: 7px;
+    }
+
  .vodFirstCol{
     height: 24.106vw;
  }
