--- a/src/Pages/Home/Home.scss
+++ b/src/Pages/Home/Home.scss
@@ -4,6 +4,10 @@
     margin-top: 40px;
     margin-bottom: -20vh;
 }
+.infinite-scroll-component {
+    overflow-x: hidden !important;
+}
+
 .channelTag{
     margin-top: 20% !important;
 }
